--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-confetti-boom": "^2.0.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
